# battle_game_2024

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/battle_game/: CMakeLists.txt
src/battle_game/app/: CMakeLists.txt  app.cpp  app.h  device_model.h
src/battle_game/core/: CMakeLists.txt  README.md  game_core.cpp  game_core.h  object.h  selectable_units.cpp  unit.h
src/battle_game/core/bullets/: bullets.h  cannon_ball.cpp  thermite_elysia214.cpp  thermite_elysia214.h
src/battle_game/core/obstacles/: obstacles.h
src/battle_game/core/particles/: smoke.cpp
src/battle_game/core/units/: CMakeLists.txt  elysia214.cpp  elysia214.h  thermite_214.cpp  thermite_214.h  tiny_tank.cpp  units.h
src/battle_game/graphics/: CMakeLists.txt  util.cpp  util.h
